feat: update index.html
feat: update index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang>
 <head>
-	<title>CV</title>
-	<link rel="stylesheet" href="/css/normalize.css" type="text/css"></link>
+	<title>
+		CV
+	</title>
 </head>
 <body>
-	<div class="center" style="width:1200px;">
-my CV
+	<div>
+		my CV
 	</div>
 </body>
 </html>
