--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>
-		CV
-	</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
+	<title>CV#3. Cross-Check</title>
 </head>
+	
 <body>
-	<div>
-		my CV
+	<div class="container">
+		<header class="header">
+			header-cv
+		</header>
+		<main>
+			main-cv
+		</main>
+		<footer class="footer">
+			<div><a href="https://github.com/roman-22-23">GitHub</a></div>
+			<div><a href="https://rs.school/js/"><img src="./assets/img/rs_school.js.svg" alt="logo-rs-school"></a></div>
+			<div>2022</div>
+		</footer>
 	</div>
 </body>
 </html>
