--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</main>
 		<footer class="footer">
 			<div><a href="https://github.com/roman-22-23">GitHub</a></div>
-			<div><a href="https://rs.school/js/"><img src="./assets/img/logo_rsschool.png" alt="logo-rsschool"></a></div>
+			<div><a href="https://rs.school/js/"><img src="/img/logo_rsschool.png" alt="logo-rsschool"></a></div>
 			<div>2022</div>
 		</footer>
 	</div>
