--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<title>CV#3. Cross-Check</title>
 </head>
 	
 <body>
 	<div class="container">
 		<header class="header">
+			<nav class="navigator">
+				<ul">
+					<li><a href="#contacts">Contacts</a></li>
+					<li><a href="#summary">Summary</a></li>
+					<li><a href="#skills">Skills</a></li>
+				</ul>
+			</nav>
 			header-cv
 		</header>
-		<main>
+		<main class="main">
 			main-cv
 		</main>
 		<footer class="footer">
-			<div><a href="https://github.com/roman-22-23">GitHub</a></div>
-			<div><a href="https://rs.school/js/"><img src="/img/logo_rsschool.png" alt="logo-rsschool"></a></div>
+			<div><a href="https://github.com/roman-22-23"><img src="./img/logo_github.png" alt="logo_github" />GitHub</a></div>
+			<div><a href="https://rs.school/js/"><img src="./img/logo_rsschool.png" alt="logo_rsschool" /></a></div>
 			<div>2022</div>
 		</footer>
 	</div>
