--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			header-cv
 		</header>
 		<main class="main">
-			main-cv
+			main-cv1
 		</main>
 		<footer class="footer">
 			<div><a href="https://github.com/roman-22-23"><img src="./img/logo_github.png" alt="logo_github" />GitHub</a></div>
